--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"hono": "^4.7.4",
+		"i18next": "^24.2.3",
+		"i18next-browser-languagedetector": "^8.0.4",
+		"i18next-http-backend": "^3.0.2",
 		"lucide-react": "^0.344.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-i18next": "^15.4.1",
 		"react-router-dom": "^6.22.3",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
