--- a/package.json
+++ b/package.json
@@ -11,20 +11,25 @@
 	},
 	"dependencies": {
 		"@hono/zod-validator": "^0.4.3",
+		"@prisma/adapter-d1": "^6.5.0",
+		"@prisma/client": "^6.5.0",
 		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-icons": "^1.3.0",
-		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.6",
-		"class-variance-authority": "^0.7.0",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.0",
 		"hono": "^4.7.4",
 		"i18next": "^24.2.3",
 		"i18next-browser-languagedetector": "^8.0.4",
 		"i18next-http-backend": "^3.0.2",
 		"lucide-react": "^0.344.0",
+		"prisma": "^6.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.55.0",
 		"react-i18next": "^15.4.1",
 		"react-router-dom": "^6.22.3",
 		"tailwind-merge": "^2.2.1",
