--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,54 +3,69 @@
  * https://developers.cloudflare.com/workers/wrangler/configuration/
  */
 {
-	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "hono-react-full-stack-template",
-	"main": "src/index.ts",
-	"compatibility_date": "2025-03-13",
-	"observability": {
-		"enabled": true
-	},
-	"dev": {
-		"port": 8787
-	},
-	"env": {
-		"development": {
-			"vars": {
-				"NODE_ENV": "development"
-			}
-		}
-	},
-	/**
+    "$schema": "node_modules/wrangler/config-schema.json",
+    "name": "hono-react-full-stack-template",
+    "main": "src/index.ts",
+    "compatibility_date": "2025-03-13",
+    "observability": {
+        "enabled": true
+    },
+    "dev": {
+        "port": 8787
+    },
+    "env": {
+        "development": {
+            "vars": {
+                "NODE_ENV": "development",
+                "ADMIN_SECRET_KEY": "admin-secret-key-2025"
+            },
+            "d1_databases": [
+                {
+                    "binding": "DB",
+                    "database_name": "hono-react-db",
+                    "database_id": "af4bf481-c674-4c90-8943-eb10c41e461d"
+                }
+            ]
+        }
+    },
+    /**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
 	 */
-	// "placement": { "mode": "smart" },
-	/**
+    // "placement": { "mode": "smart" },
+    /**
 	 * Bindings
 	 * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
 	 * databases, object storage, AI inference, real-time communication and more.
 	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
 	 */
-	/**
+    /**
 	 * Environment Variables
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 	 */
-	// "vars": { "MY_VARIABLE": "production_value" },
-	/**
+    // "vars": { "MY_VARIABLE": "production_value" },
+    /**
 	 * Note: Use secrets to store sensitive data.
 	 * https://developers.cloudflare.com/workers/configuration/secrets/
 	 */
-	/**
+    /**
 	 * Static Assets
 	 * https://developers.cloudflare.com/workers/static-assets/binding/
 	 */
-	"assets": {
-		"directory": "./dist/",
-		"binding": "ASSETS"
-	}
-	/**
+    "assets": {
+        "directory": "./dist/",
+        "binding": "ASSETS"
+    },
+    "d1_databases": [
+        {
+            "binding": "DB",
+            "database_name": "hono-react-db",
+            "database_id": "af4bf481-c674-4c90-8943-eb10c41e461d"
+        }
+    ]
+    /**
 	 * Service Bindings (communicate between multiple Workers)
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
 	 */
-	// "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
+    // "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
 }
